# robocopMCP

./: .gitignore  CLAUDE.md  LICENSE  README.md  ex06-dual-ai-agent-race-mcp.md  google-api-installation-guide.md  pyproject.toml
_build/: INTEROP_STATUS.md  MORNING_BRIEF.md  PHASES.md  PROGRESS_LOG.md  SHARED_RULES.md  SPEC.md
_build/opponent/: assignment.md  cop_rob_game_rules.md
config/: config.json  config_advanced.json  config_bonus.json  config_interop.json  logging_config.json  rate_limits.json
docs/: COST_ANALYSIS.md  PLAN.md  PRD.md  PRD_api_gatekeeper.md  PRD_game_engine.md  PRD_mcp_orchestration.md  PRD_negotiation.md  PRD_q_learning.md  PRD_reporting.md  PROMPTS_LOG.md  TODO.md
docs/adr/: 0001-tooling-and-bootstrap.md  0002-state-sharing.md  0003-config-profiles.md  0004-barrier-shaping.md  0005-interop-p2p-agent.md
notebooks/: analysis.ipynb
results/: email_body.txt
results/appl/: negotiation.md
results/barrier_demo/: transcript.md
results/bonus_demo/: email_body.txt  events.jsonl  negotiation.md  summary.json  summary.md  transcript.md
results/haiku_demo/: transcript.md
results/haiku_neg/: negotiation.md
results/interop/: HANDSHAKE_LOG.md  INTEROP_SUMMARY.md  SUBGAMES.md  SUMMARY.md  email_body.txt  report_bonus.json
results/qtables/: learning_curve.csv  qtable_cop.json  qtable_thief.json
results/qtables_advanced/: ab_barriers.json  learning_curve.csv  qtable_cop.json  qtable_thief.json
scripts/: barrier_demo.py  build_notebook.py  gmail_oauth_manual.py  interop_deploy.sh  interop_finalize.py  interop_handshake.py  interop_match.py  interop_match.sh  interop_serve.py  interop_smoke_clientB.py  run_demo.py  send_bonus_report.py  send_report.py  train_advanced.py
tests/: conftest.py
(+109 files in other folders)
