[project]
name = "robocop-mcp"
version = "1.00"
description = "Dual AI agent pursuit race (Cop vs Thief) over two natural-language MCP servers."
authors = [
    { name = "Ilya Lazarev" },
    { name = "Nadav Goldin" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "anthropic>=0.40.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
robocop = "robocop_mcp.cli:main"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbconvert>=7.17.1",
    "nbformat>=5.10.4",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/robocop_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebooks are analysis artifacts (compact, semicolon-joined cells), not app code.
extend-exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/robocop_mcp --cov-report=term-missing --cov-fail-under=85"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/robocop_mcp"]
branch = true
omit = [
    "src/robocop_mcp/cli.py",
    "src/robocop_mcp/mcp/cop_server.py",
    "src/robocop_mcp/mcp/thief_server.py",
    "src/robocop_mcp/agents/anthropic_client.py",
    "src/robocop_mcp/reporting/render.py",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
